tests/errors/wrong_type_usage/wrong_type_assignment.meth
int x = 69;
str y = "420";

x = y;